Finish page 2, 3 and footer

--- a/index.html
+++ b/index.html
@@ -8,32 +8,44 @@
   <link rel="stylesheet" href="landing-page.css">
   <link rel="stylesheet" href='https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Pacifico&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <title>Eryz's Page</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Pacifico&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Josefin+Sans:wght@300;400&family=Pacifico&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
+  <link rel="icon" href="images/9f75747a2dfb40c7f153d54faad41ea7.png">
+  <title>Gura's Fansite</title>
 </head>
+
 <body>
   <div class="header">
     <div class="logo-container">
-      <img class="logo" src="images/dbdf83d929b6784ec7ba4fcf5bdfe6d16c767cf8r1-1280-1280_hq.gif">
+      <a href="https://gabriellagloria.github.io/Gura-Landing-Page/">
+        <img class="logo" src="images/dbdf83d929b6784ec7ba4fcf5bdfe6d16c767cf8r1-1280-1280_hq.gif">
+      </a>
       <div class="website-title">
         <p>GAWR GURA FANSITE 🦈</p>
       </div>
     </div>
     <div class="links">
-      <a href="">About</a>
-      <a href="">Teams</a>
-      <a href="">Quote</a>
-      <a href="">Contacts</a>
+      <a href="#inforr">About</a>
+      <a href="#page2">Members</a>
+      <a href="#page3">Quote</a>
+      <a href="#footer">Contacts</a>
     </div>
   </div>
 
   <div class="page1">
-    <div class="information-container">
+    <div id="inforr" class="information-container">
       <div class="information-group">
         <p class="information">Welcome to Gawr Gura Fansite!</p>
         <p class="information-2">Shark-girl Idol of Hololive EN ! ---A descendant of the Lost City of Atlantis, who swam to Earth while saying, "It's so boring down there LOLOLOL! Gura bought her clothes (and her shark hat) in the human world and she really loves them. In her spare time, she enjoys talking to marine life</p>
-        <button class = "link">Subsrcibe to Gura!</button>
+        <a href="https://www.youtube.com/@GawrGura">
+          <button class = "link">Subscribe to Gura!</button>
+        </a>
       </div>
       <div class="info-img">
         <img class="imgs" src="images/480px-Gawr_Gura_-_Portrait_01.png">
@@ -41,40 +53,96 @@
     </div>
   </div>
 
-  <div class="page2">
-    <p>Our team :</p>
+  <div id="page2" class="page2">
+    <p> 🔱 🦈 Check Out Other <img class="holo-logo" src="images/Hololive_English_logo.webp"> Members  🦈 🔱</p>
     <div class="photos">
       <div class="one">
-        <img class="photo" src="">
-      </div>
-      <div class="two">
-        <img class="photo" src="">
+        <a href="https://www.youtube.com/@CeresFauna">
+          <img class="photo" src="images/Ceres_Fauna_-_Icon.webp">
+          <a>Ceres Fauna</a>
+        </a>
       </div>
       <div class="three">
-        <img class="photo" src="">
+        <a href="https://www.youtube.com/@HakosBaelz">
+          <img class="photo" src="images/Hakos_Baelz_-_Icon.webp">
+          <a>Hakos Baelz</a>
+        </a>
       </div>
       <div class="four">
-        <img class="photo" src="">
+        <a href="https://www.youtube.com/@IRyS">
+          <img class="photo" src="images/IRyS_-_Icon.webp">
+          <a>IRyS</a>
+        </a>
+      </div>
+      <div class="five">
+        <a href="https://www.youtube.com/@MoriCalliope">
+          <img class="photo" src="images/Mori_Calliope_-_Icon.webp">
+          <a>Mori Calliope</a>
+        </a>
+      </div>
+      <div class="six">
+        <a href="https://www.youtube.com/@NanashiMumei">
+          <img class="photo" src="images/Nanashi_Mumei_-_Icon.webp">
+          <a>Nanashi Mumei</a>
+        </a>
+      </div>
+      <div class="seven">
+        <a href="https://www.youtube.com/@NinomaeInanis">
+          <img class="photo" src="images/Ina-2.webp">
+          <a>Ninomae Ina'nis</a>
+        </a>
+      </div>
+      <div class="eight">
+        <a href="https://www.youtube.com/@OuroKronii">
+          <img class="photo" src="images/Ouro_Kronii_-_Icon.webp">
+          <a>Ouro Kronii</a>
+        </a>
+      </div>
+      <div class="nine">
+        <a href="https://www.youtube.com/@TakanashiKiara">
+          <img class="photo" src="images/Takanashi_Kiara_-_Icon.webp">
+          <a>Takanashi Kiara</a>
+        </a>
+      </div>
+      <div class="ten">
+        <a href="https://www.youtube.com/@TsukumoSana">
+          <img class="photo" src="images/Tsukumo_Sana_-_Icon.webp">
+          <a>Tsukumo Sana</a>
+        </a>
+      </div>
+      <div class="eleven">
+        <a href="https://www.youtube.com/@WatsonAmelia">
+          <img class="photo" src="images/Watson_Amelia_-_Icon.webp">
+          <a>Watson Amelia</a>
+        </a>
       </div>
     </div>
   </div>
 
-  <div class="page3">
-    <p>some quote ejhdbfcjwebf wefuygfhesdvfh
-       cdjhsjfgesjdcdskjjbfcjdsb fhjesfgcjdsgfcdk
-      djsbdfjbds dceiuhwfdheds</p>
-    <p>djksnfkbfkjbs</p>
+  <div id="page3" class="page3">
+    <div class="helper">
+      <p class="gura-quote">My life advice? Stop giving a damn, Live for yourself, and live your life the way you want to,
+        and not for anyone else. Plus, buy a towel warmer.
+      </p>
+      <p>Gawr Gwoomba, 2021</p>
+    </div>
+
+    <img class="gura-gif" src="images/98c3e246a5de5716a2d81ff5d2f9f0c9.gif">
   </div>
 
-  <div class="page4">
-    <div class="box">
-      <div class="contact-info">
-        <p>Cdjsbfjcdbjfb</p>
-        <p>Ssjdnfsjbfjdsbfcjhsdbf</p>
-      </div>
-      <button></button>
+  <div id="footer" class="footer">
+    <p class="credits">@ 2023 by GabriellaGloria 💙</p>
+    <div class="contactme">
+      <p>Contacts :</p>
+      <a href="mailto:gloriagabriella33@gmail.com">
+        <img class="mail" src="images/maill.svg">
+      </a>
+      <a href="https://github.com/GabriellaGloria">
+        <img class="github" src="images/ghub.svg">
+      </a>
+
+      <!-- <img class="insta" src="images/Untitled364_20230120102446.PNG"> -->
     </div>
   </div>
-  <div class="footer"></div>
 </body>
 </html>
