Fix resizing errors using flexbox

--- a/index.html
+++ b/index.html
@@ -118,30 +118,31 @@
       </div>
     </div>
   </div>
-
-  <div id="page3" class="page3">
-    <div class="helper">
-      <p class="gura-quote">My life advice? Stop giving a damn, Live for yourself, and live your life the way you want to,
-        and not for anyone else. Plus, buy a towel warmer.
-      </p>
-      <p>Gawr Gwoomba, 2021</p>
+  <div class="container-page3">
+    <div id="page3" class="page3">
+      <div class="helper">
+        <p class="gura-quote">My life advice? Stop giving a damn, Live for yourself, and live your life the way you want to,
+          and not for anyone else. Plus, buy a towel warmer.
+        </p>
+        <p>Gawr Gwoomba, 2021</p>
+      </div>
+  
+      <img class="gura-gif" src="images/98c3e246a5de5716a2d81ff5d2f9f0c9.gif">
     </div>
-
-    <img class="gura-gif" src="images/98c3e246a5de5716a2d81ff5d2f9f0c9.gif">
-  </div>
-
-  <div id="footer" class="footer">
-    <p class="credits">@ 2023 by GabriellaGloria 💙</p>
-    <div class="contactme">
-      <p>Contacts :</p>
-      <a href="mailto:gloriagabriella33@gmail.com">
-        <img class="mail" src="images/maill.svg">
-      </a>
-      <a href="https://github.com/GabriellaGloria">
-        <img class="github" src="images/ghub.svg">
-      </a>
-
-      <!-- <img class="insta" src="images/Untitled364_20230120102446.PNG"> -->
+  
+    <div id="footer" class="footer">
+      <p class="credits">@ 2023 by GabriellaGloria 💙</p>
+      <div class="contactme">
+        <p>Contacts :</p>
+        <a href="mailto:gloriagabriella33@gmail.com">
+          <img class="mail" src="images/maill.svg">
+        </a>
+        <a href="https://github.com/GabriellaGloria">
+          <img class="github" src="images/ghub.svg">
+        </a>
+  
+        <!-- <img class="insta" src="images/Untitled364_20230120102446.PNG"> -->
+      </div>
     </div>
   </div>
 </body>
